--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc"
   },
   "repository": {
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/dcartwright07/my-typescript-package#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.3",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   },
   "files": ["lib/**/*"]
