--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-typescript-package",
+  "name": "dcartwright07-typescript-package",
   "version": "1.0.0",
   "description": "A nice greeter",
   "main": "lib/index.js",
